<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.PlaceOrderActivity">

    <androidx.constraintlayout.widget.ConstraintLayout


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="32dp"
        tools:context=".ui.PlaceOrderActivity">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/nama"
            app:layout_constraintTop_toBottomOf="@+id/imgCarThumb"
            tools:layout_editor_absoluteX="32dp">

            <EditText
                android:id="@+id/etCustName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/bg_shadow_box"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="32dp" />

        <ImageView
            android:id="@+id/imgCarThumb"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/avanza"
            app:layout_constraintBottom_toBottomOf="@+id/view5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view5" />

        <TextView
            android:id="@+id/tvCarName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Nama Mobil"
            app:layout_constraintBottom_toBottomOf="@+id/imgCarThumb"
            app:layout_constraintStart_toEndOf="@+id/imgCarThumb"
            app:layout_constraintTop_toTopOf="@+id/imgCarThumb" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/phone"
            app:layout_constraintTop_toBottomOf="@+id/textName"
            tools:layout_editor_absoluteX="32dp" >

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textAdress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/adsress"
            app:layout_constraintTop_toBottomOf="@+id/textPhone"
            tools:layout_editor_absoluteX="32dp" >


            <EditText
                android:id="@+id/etAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="32dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/duration"
            app:layout_constraintStart_toStartOf="@+id/textAdress"
            app:layout_constraintTop_toBottomOf="@+id/textAdress" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/date0"
            app:layout_constraintStart_toStartOf="@+id/textView8"
            app:layout_constraintTop_toBottomOf="@+id/textView8">
            <EditText
                android:id="@+id/etDateStart"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:background="@color/white"
                android:text="@string/_00_00_0000"
                android:inputType="none"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:hint="@string/date1"
            app:layout_constraintStart_toEndOf="@+id/textStart"
            app:layout_constraintTop_toTopOf="@+id/textStart">

            <EditText
                android:id="@+id/etDateEnd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:inputType="none"
                android:text="@string/_00_00_0000" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/price_total"
            app:layout_constraintTop_toBottomOf="@+id/textStart"
            tools:layout_editor_absoluteX="32dp">


            <EditText
                android:id="@+id/etPriceTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="32dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/order"
            app:layout_constraintTop_toBottomOf="@+id/textPrice"
            tools:layout_editor_absoluteX="33dp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#FF0000"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
            tools:layout_editor_absoluteX="32dp" />

        <TextView
            android:id="@+id/tvChecking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintVertical_bias="0.0" />

        <ProgressBar
            android:id="@+id/progressBarCheck"
            style="?android:attr/progressBarStyle"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textEnd"
            app:layout_constraintStart_toEndOf="@+id/tvChecking"
            app:layout_constraintTop_toBottomOf="@+id/textAdress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


