<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    android:layout_height="match_parent"
    tools:context=".ui.ReportActivity">

    <ProgressBar
        android:id="@+id/progressBarReport"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:text="Pemasukan 30 hari terakhir"/>

    <LinearLayout
        android:layout_marginBottom="16dp"
        android:weightSum="10"
        android:padding="10dp"
        android:background="@color/purple_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:text="@string/day"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="30dp" />
        <TextView
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/orderCount"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="30dp" />
        <TextView
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/income"
            tools:layout_editor_absoluteX="26dp"
            tools:layout_editor_absoluteY="30dp" />

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/list_report"
        android:id="@+id/rvReport"/>


</LinearLayout>